name:                driven
version:             0.0.0.1
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Roman Gonzalez
maintainer:          romanandreg@gmail.com
copyright:           © 2017 Roman Gonzalez
homepage:            https://github.com/roman/Haskell-driven
bug-reports:         https://github.com/roman/Haskell-driven/issues
category:            Test
build-type:          Simple
stability:           alpha (experimental)
tested-with:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
cabal-version:       >=1.10

extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/roman/Haskell-driven

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Control.Driven.Internal.Core
  other-modules:     Control.Driven.Internal.Types
                   , Control.Driven.Internal.Worker
                   , Control.Driven.Internal.Backend.Memory
  build-depends:     base >= 4.8 && < 5
                   , protolude
                   --
                   , bytestring >=0.10 && <0.11
                   , containers >=0.5 && <0.6
                   , text >=1.2 && <1.3
                   , unordered-containers
                   , hashable
                   , etc
                   --
                   , aeson
                   , hjsonschema
                   --
                   , proto-lens >=0.2 && <0.3
                   , lens-family >=1.2 && <1.3
                   , lens-labels >=0.1 && <0.2
                   , data-default-class >=0.1 && <0.2
                   --
                   , async
                   , stm-chans
                   , stm
                   , ghc-prim
                   , yaml

-- executable driven-exe
--   default-language:  Haskell2010
--   ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:    src
--   main-is:           Main.hs
--   build-depends:     base >= 4.8 && < 5
--                    , protolude
--                    , driven

test-suite driven-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test
  main-is:           TestSuite.hs
  build-depends:     base >= 4.8 && < 5
                   , protolude
                   , tasty
                   , tasty-hunit
                   , tasty-smallcheck
                   , tasty-hspec
                   , tasty-quickcheck
                   , tasty-rerun
                   , tasty-discovery
                   , driven

test-suite driven-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test
  main-is:           DocTest.hs
  build-depends:     base >= 4.8 && < 5
                   , protolude
                   , doctest
                   , Glob
                   , QuickCheck
                   , driven

benchmark driven-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , protolude
                   , criterion
                   , driven
