name:                driven-protobuff
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Haskell-driven
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Driven.Schema.Protobuff
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , aeson
                     , text
                     , proto-lens >=0.2 && <0.3
                     , lens-family >=1.2 && <1.3
                     , lens-labels >=0.1 && <0.2
                     , data-default-class >=0.1 && <0.2
                     , driven-core
  default-language:    Haskell2010

test-suite driven-protobuffer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , driven-protobuff
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/driven-protobuffer
